<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow_400"
    android:id="@+id/loginConstraint"
    tools:context=".view.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_extra_large"
            android:autofillHints="@string/app_name"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/ic_trailerx"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/labelUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textAppearance="@style/TextAppearance.Trailerx.LoginLabel"
            app:layout_constraintStart_toStartOf="@+id/editTextEmail"
            app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

        <EditText
            android:id="@+id/editTextEmail"
            style="@style/Widget.Trailerx.TextInputEditText.Login"
            android:layout_width="0dp"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginStart="@dimen/margin_extra_large"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_extra_large"
            android:autofillHints=""
            android:hint="@string/user"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelUser"
            tools:ignore="TextContrastCheck"
            tools:text="juanpedro@gmail.com" />

        <TextView
            android:id="@+id/labelPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/password"
            android:textAppearance="@style/TextAppearance.Trailerx.LoginLabel"
            app:layout_constraintStart_toStartOf="@+id/editTextPassword"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

        <EditText
            android:id="@+id/editTextPassword"
            style="@style/Widget.Trailerx.TextInputEditText.Login"
            android:layout_width="0dp"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginStart="@dimen/margin_extra_large"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_extra_large"
            android:autofillHints="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelPassword"
            tools:ignore="TextContrastCheck"
            tools:text="MyPassword" />

        <TextView
            android:id="@+id/labelForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/forgot_password"
            android:textAppearance="@style/TextAppearance.Trailerx.Caption"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/editTextPassword"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            style="@style/Widget.Trailerx.Button.Secondary"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/margin_extra_large"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_extra_large"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelForgotPassword" />

        <TextView
            android:id="@+id/labelLoginWith"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/login_with"
            android:textAppearance="@style/TextAppearance.Trailerx.ItalicBody"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

        <!--TODO: Turn visible when apple auth is available -->
        <FrameLayout
            android:id="@+id/apple_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_large"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/google_btn"
            app:layout_constraintTop_toTopOf="@+id/google_btn"
            tools:context=".ui.view.MainActivity">

            <ImageView
                android:layout_width="@dimen/icon_layout_width"
                android:layout_height="@dimen/icon_layout_height"
                android:layout_gravity="center"
                android:background="@drawable/ic_white_circle"
                android:contentDescription="@string/img_apple"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:layout_width="@dimen/icon_width"
                android:layout_height="@dimen/icon_height"
                android:layout_gravity="center"
                android:contentDescription=""
                android:src="@drawable/ic_apple"
                tools:ignore="ContentDescription" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/google_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelLoginWith"
            tools:context=".ui.view.MainActivity">

            <ImageView
                android:layout_width="@dimen/icon_layout_width"
                android:layout_height="@dimen/icon_layout_height"
                android:layout_gravity="center"
                android:background="@drawable/ic_white_circle"
                android:contentDescription="@string/img_google"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:layout_width="@dimen/icon_width"
                android:layout_height="@dimen/icon_height"
                android:layout_gravity="center"
                android:contentDescription=""
                android:src="@drawable/ic_google"
                tools:ignore="ContentDescription" />
        </FrameLayout>

        <!--TODO: Turn visible when facebook auth is available -->
        <FrameLayout
            android:id="@+id/facebook_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="@+id/google_btn"
            app:layout_constraintStart_toEndOf="@+id/google_btn"
            tools:context=".ui.view.MainActivity">

            <ImageView
                android:layout_width="@dimen/icon_layout_width"
                android:layout_height="@dimen/icon_layout_height"
                android:layout_gravity="center"
                android:background="@drawable/ic_white_circle"
                android:contentDescription="@string/img_facebook"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:layout_width="@dimen/icon_width"
                android:layout_height="@dimen/icon_height"
                android:layout_gravity="center"
                android:contentDescription=""
                android:src="@drawable/ic_facebook"
                tools:ignore="ContentDescription" />
        </FrameLayout>

        <TextView
            android:id="@+id/labelHasAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/has_account"
            android:textAppearance="@style/TextAppearance.Trailerx.ItalicBody"
            app:layout_constraintTop_toBottomOf="@+id/google_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/labelRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textAppearance="@style/TextAppearance.Trailerx.Body.DarkItalic"
            android:textColor="@color/gray_800"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelHasAccount" />

        <TextView
            android:id="@+id/labelGuest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/guest"
            android:textAppearance="@style/TextAppearance.Trailerx.Body.Dark"
            android:textColor="@color/gray_800"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelRegister" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/progress_component"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_light_100"
        android:visibility="gone">
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="@dimen/progress_size"
            android:layout_height="@dimen/progress_size"
            style="@style/Widget.Trailerx.ProgressBar"/>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>