<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    tools:context=".view.SignUpFragment">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_small"
        android:background="?android:attr/colorBackground"
        android:scaleX="@dimen/scale_logo_back"
        android:scaleY="@dimen/scale_logo_back"
        android:src="@drawable/ic_arrow_back"
        android:contentDescription="@string/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?android:attr/colorForeground" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        app:layout_constraintVertical_bias="0.2">

        <FrameLayout
            android:id="@+id/imgContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_background_logo"
            app:layout_constraintStart_toStartOf="@+id/labelTitle"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_header"
                android:layout_width="@dimen/icon_login_with"
                android:layout_height="@dimen/icon_login_height"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:scaleX="@dimen/scale_x_logo_login"
                android:scaleY="@dimen/scale_y_logo_login"
                android:src="@drawable/ic_launcher_foreground" />
        </FrameLayout>

        <TextView
            android:id="@+id/labelTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra_large"
            android:text="@string/create_account"
            android:textAppearance="@style/TextAppearance.Trailerx.LoginTitle"
            app:layout_constraintStart_toStartOf="@+id/textLayoutName"
            app:layout_constraintTop_toBottomOf="@+id/imgContainer" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textLayoutName"
            style="@style/Widget.Trailerx.TextInputLayout.Signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_extra_large"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_extra_large"

            android:hint="@string/name"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                tools:text="Benjamin"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_layout_email"
            style="@style/Widget.Trailerx.TextInputLayout.Signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_extra_large"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_extra_large"

            android:hint="@string/email"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textLayoutName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textLayoutPassword"
            style="@style/Widget.Trailerx.TextInputLayout.Signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_extra_large"

            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_extra_large"

            android:hint="@string/password"
            android:inputType="textPassword"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_layout_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/label_connect_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/password_rule"
            android:textAppearance="@style/TextAppearance.Trailerx.Caption"
            app:layout_constraintStart_toStartOf="@+id/textLayoutPassword"
            app:layout_constraintTop_toBottomOf="@+id/textLayoutPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_accept"
            style="@style/Widget.Trailerx.Button.Secondary"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/margin_extra_large"
            android:layout_marginTop="@dimen/margin_extra_large"
            android:layout_marginEnd="@dimen/margin_extra_large"
            android:text="@string/accept"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_connect_google" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/progress_component"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_light_100"
        android:visibility="gone">
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="@dimen/progress_size"
            android:layout_height="@dimen/progress_size"
            style="@style/Widget.Trailerx.ProgressBar"/>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>